<resources>
    <string name="app_name">OnlineStore</string>
    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="remember">Remember me</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_rep">Repeat password</string>
    <string name="register">Register</string>
    <string name="consent">I agree to the processing of personal data</string>
    <string name="fail_login">Failed Log In</string>
    <string name="todo">TODO</string>
    <string name="search_hint">Product name</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="fail_pass_eq">Password are not equal</string>
    <string name="fail_pass_small">Passwords must be greater than 8 characters</string>
    <string name="name_of_shop">name of shop</string>
    <string name="description_of_shop">description of shop</string>
    <string name="create_shop">create shop</string>
    <string name="products">Products</string>
    <string name="product_name">Name of product</string>
    <string name="description_of_product">Description of product</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="add_product">Add product</string>
    <string name="category">Category</string>
    <string name="profile">profile</string>
    <string name="cart">cart</string>
    <string name="order">order</string>
    <string name="orders">orders</string>
    <string name="pay">pay</string>
    <string name="date">date</string>
    <string name="payment">payment</string>
    <string name="status">status</string>
    <string name="shop">shop</string>
    <string name="problem_with_network">problem with network</string>
    <string name="log_out">Log out</string>
</resources>
