<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_48dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_local_grocery_store_black_24dp"
            android:title="@string/cart"/>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_local_grocery_store_black_24dp"
            android:title="@string/orders"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_directions_walk_black_24dp"
            android:title="@string/log_out"/>
    </group>

</menu>