<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/login_field"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="160dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="6dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="6dp"
        android:text="@string/remember"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/signup"
        android:textAppearance="@style/TextAppearance.AppCompat" />
</LinearLayout>