<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addproduct.AddProductActivity">

    <include layout="@layout/toolbar"></include>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/product_name_edit"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/product_name"
        android:layout_below="@+id/toolbar_actionbar"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/product_description_edit"
        android:layout_below="@+id/product_name_edit"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/description_of_product"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amount"
        android:layout_below="@+id/product_description_edit"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/amount"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/product_price_edit"
        android:layout_below="@+id/amount"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/price"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/category_edit"
        android:layout_below="@+id/product_price_edit"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="category"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_product"
        android:layout_below="@+id/category_edit"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_product"/>

</RelativeLayout>